--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,6 +11,7 @@
 	flex: 1;
 	display: flex;
 	/* flex-direction: column-reverse; */
+	z-index: 5 !important;
 	justify-content: center;
 	align-items: center;
 }
