--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,13 +1,13 @@
 .profileImage {
-	width: 400px;
-	height: auto;
-	border-radius: 100px;
-	margin-left: 40px;
+    margin-left: 40px;
+    height: 50px;
+    width: 300px;
+    border-radius: 10000px;
+    border: 2px solid white;
 }
 
 .innerPTag {
-	width: 80%;
-	margin: 20px auto;
-	font-size: 20px;
-	color: rgb(29, 29, 29);
+    width: 80%;
+    margin: 20px auto;
+    font-size: 20px;
 }
