--- a/styles/singleProject.module.css
+++ b/styles/singleProject.module.css
@@ -6,8 +6,19 @@
     height: 100%;
 }
 
-.blurBackground {
-    width: 350px;
-    border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.25);
+.blurForm {
+    backdrop-filter: blur(5px);
 }
+
+.techStackImage {
+    width: 60px;
+    height: 60px;
+    transition: all 0.3 ease !important;
+}
+
+.techStackImage:hover {
+    transition: all 1s ease;
+    transform: scale(1.3);
+}
+
+/* slightly transparent fallback */
