--- a/styles/singleProject.module.scss
+++ b/styles/singleProject.module.scss
@@ -14,6 +14,7 @@
 
 .projectImageDiv {
     width: 100%;
+    cursor: pointer;
     .projectImage {
         max-width: 100%;
         height: auto;
@@ -44,6 +45,11 @@
 .techStackImage:hover {
     transition: all 1s ease;
     transform: scale(1.3);
+}
+
+.modalImage {
+    width: 100%;
+    height: auto;
 }
 
 /* slightly transparent fallback */
