--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    scroll-snap-type: y mandatory;
+}
+
 a {
     color: inherit;
     text-decoration: none;
