--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -3,7 +3,7 @@
 .contactImage {
     width: 100px;
     height: 100px;
-    transition: all 0.3s ease;
+    // transition: all 0.3s ease;
 
     @include mobile {
         width: 70px;
@@ -11,7 +11,7 @@
     }
 }
 
-.contactImage:hover {
-    transform: scale(1.3);
-    cursor: pointer;
-}
+// .contactImage:hover {
+//     transform: scale(1.3);
+//     cursor: pointer;
+// }
