--- a/styles/tech.module.scss
+++ b/styles/tech.module.scss
@@ -10,8 +10,8 @@
     }
 
     @include mobile {
-        width: 100px;
-        height: auto;
+        width: 60px;
+        height: 60px;
     }
 }
 
