--- a/styles/singleProject.module.scss
+++ b/styles/singleProject.module.scss
@@ -50,14 +50,17 @@
 
 .modalImage {
     width: 100%;
-    height: auto;
+    object-fit: contain;
+    position: relative;
+    height: unset !important;
 }
 
 /* slightly transparent fallback */
 .modalBody {
     width: 80vw;
-    height: max-content;
+    height: 50vh;
     box-shadow: 24;
+    position: relative;
 }
 
 .modalBackdrop {
