--- a/styles/singleProject.module.scss
+++ b/styles/singleProject.module.scss
@@ -18,10 +18,11 @@
     .projectImage {
         max-width: 100%;
         height: auto;
-        border-radius: 40px 0 0 40px;
+        border-radius: 20px 20px 0 0;
+        height: 100%;
 
         @include ipad {
-            border-radius: 40px 40px 0 0;
+            border-radius: 20px 20px 0 0;
         }
     }
 }
